--- a/src/snake-retriever.html
+++ b/src/snake-retriever.html
@@ -72,15 +72,16 @@
             box-shadow: 0 0 30px rgba(0, 255, 65, 0.5);
             border-radius: 5px;
             padding: 10px;
-            max-width: 100%;
-            margin-bottom: 20px;
+            max-width: 600px;
+            width: 100%;
+            margin: 0 auto 20px;
         }
 
         canvas {
             display: block;
             background: #222;
             border: 1px solid #00ff41;
-            max-width: 100%;
+            width: 100%;
             height: auto;
         }
 
@@ -283,9 +284,8 @@
                 font-size: 1em;
             }
 
-            canvas {
-                max-width: 95vw;
-                max-height: 60vh;
+            .canvas-container {
+                max-width: calc(100vw - 40px);
             }
 
             .mobile-controls.show {
@@ -294,6 +294,19 @@
         }
 
         @media (max-width: 480px) {
+            body {
+                padding: 80px 5px 20px;
+            }
+
+            .container {
+                padding: 10px;
+            }
+
+            .canvas-container {
+                max-width: calc(100vw - 20px);
+                padding: 5px;
+            }
+
             h1 {
                 font-size: 1.5em;
             }
