--- a/src/terminal-memory.html
+++ b/src/terminal-memory.html
@@ -73,6 +73,7 @@
             gap: 15px;
             margin-bottom: 30px;
             max-width: 800px;
+            width: 100%;
             margin-left: auto;
             margin-right: auto;
         }
@@ -257,9 +258,14 @@
                 padding: 80px 10px 20px;
             }
 
+            .container {
+                padding: 10px;
+            }
+
             .game-board {
                 grid-template-columns: repeat(3, 1fr);
                 gap: 10px;
+                max-width: calc(100vw - 40px);
             }
 
             h1 {
@@ -273,6 +279,7 @@
             .card {
                 min-height: 100px;
                 font-size: 0.9em;
+                padding: 8px;
             }
 
             .stat-box {
@@ -291,9 +298,18 @@
         }
 
         @media (max-width: 480px) {
+            body {
+                padding: 80px 5px 20px;
+            }
+
+            .container {
+                padding: 5px;
+            }
+
             .game-board {
                 grid-template-columns: repeat(2, 1fr);
                 gap: 8px;
+                max-width: calc(100vw - 20px);
             }
 
             .stats {
