fix canvas bleeding right with box-sizing border-box
- added box-sizing: border-box to all elements
- updated mobile calc constraints to account for proper box model
- 768px: calc(100vw - 50px) for body + container padding
- 480px: calc(100vw - 30px) for tighter mobile spacing
- reduced card padding on mobile for better fit

--- a/src/snake-retriever.html
+++ b/src/snake-retriever.html
@@ -6,6 +6,10 @@
     <title>Snake Retriever - Lab Escape</title>
     <link rel="stylesheet" href="../page-theme.css">
     <style>
+        * {
+            box-sizing: border-box;
+        }
+
         body {
             padding: 80px 20px 20px;
             overflow-x: auto;
@@ -276,6 +280,10 @@
                 padding: 80px 10px 20px;
             }
 
+            .container {
+                padding: 15px;
+            }
+
             h1 {
                 font-size: 2em;
             }
@@ -285,7 +293,7 @@
             }
 
             .canvas-container {
-                max-width: calc(100vw - 40px);
+                max-width: calc(100vw - 50px);
             }
 
             .mobile-controls.show {
@@ -303,8 +311,8 @@
             }
 
             .canvas-container {
-                max-width: calc(100vw - 20px);
-                padding: 5px;
+                max-width: calc(100vw - 30px);
+                padding: 8px;
             }
 
             h1 {
